--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@intelligence-studio/wizard-core",
+  "name": "@joseph.ehler/wizard-core",
   "version": "0.1.0",
   "description": "Headless wizard engine: expression parser, flow runtime, validation",
   "type": "module",
