fix: update package scope to @joseph-ehler

--- a/packages/wizard-react/package.json
+++ b/packages/wizard-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@joseph.ehler/wizard-react",
+  "name": "@joseph-ehler/wizard-react",
   "version": "0.2.1",
   "description": "React runtime for Forms Studio: render any JSON field type with RHF + Zod",
   "type": "module",
