feat: Phase 1 - Unified Overlay System Foundation
✅ Core Primitives Created:
- OverlayPickerCore: State, focus trap, keyboard handling
- OverlayPositioner: Floating UI integration
- OverlaySheet: Mobile sheet with drag & swipe
- PickerList: Listbox container with ARIA
- PickerOption: Selectable items with states
- PickerSearch: Sticky search with debounce
- PickerEmptyState: No results messaging

Dependencies:
- Added @floating-ui/react for positioning

Architecture:
- JSON-configurable (ui.* keys)
- Mobile-first (sheet by default)
- Device detection ready
- Focus management built-in
- Scroll lock utilities
- Proper ARIA semantics

Next: Phase 2 - Pilot with SelectField & MultiSelectField

Phase 1: ✅ COMPLETE

--- a/packages/wizard-react/package.json
+++ b/packages/wizard-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joseph-ehler/wizard-react",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "React runtime for Forms Studio: render any JSON field type with RHF + Zod",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -49,6 +49,7 @@
     "zod": "^3.22.0"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
     "@headlessui/react": "^2.2.9",
     "@joseph.ehler/wizard-core": "workspace:*",
     "date-fns": "^4.1.0",
