feat: Soft extract Design System as @intstudio/ds (monorepo)
🎯 SOFT EXTRACTION COMPLETE

Renamed @joseph-ehler/wizard-react → @intstudio/ds while keeping
it in the monorepo. This gives us logical separation without the
coordination tax of publishing to npm yet.

## Changes

**Package Identity:**
- Name: @intstudio/ds
- Description: Intelligence Studio Design System
- Keywords: design-system, tokens, primitives, a11y, flat-design
- Peer deps: Only React (removed RHF + Zod)

**Demo Migration:**
- All 27 files updated via automated codemod
- Imports: @joseph.ehler/wizard-react → @intstudio/ds
- Uses workspace:* protocol (no npm yet)

**Infrastructure:**
- scripts/migrate-to-ds.sh (automated migration)
- DS_EXTRACTION_PLAN.md (full roadmap)
- DS_SOFT_EXTRACTION_COMPLETE.md (today's work)

## Benefits ✅

1. **Logical separation** - DS has clear identity
2. **Zero coordination tax** - Still in monorepo
3. **Workspace protocol** - Instant sync during development
4. **Migration proven** - Script works, builds pass
5. **Reversible** - Can revert if needed

## What Didn't Change

- Physical location (still packages/wizard-react/)
- Build process (same tsup config)
- API surface (same exports)
- Publishing (workspace only, no npm)

## Next Phase: 2-Week Stabilization

**Week 1-2:**
- Add Playwright smoke tests
- Create visual regression baseline
- Set up Storybook
- Document all patterns

**Week 3-4:**
- Import audit (find all DS usage)
- API freeze
- Final bug sweep
- Prepare for npm publish

**Then:** Hard extract (@intstudio/ds@0.1.0 on npm)

## Verification

✅ Build passing (645KB JS, 86KB CSS)
✅ 27 files migrated successfully
✅ Lockfile clean
✅ Demo imports updated
✅ No breaking changes

## Files Modified

- packages/wizard-react/package.json (renamed)
- packages/wizard-react/demo/package.json (dep updated)
- packages/wizard-react/demo/src/**/*.tsx (imports updated)
- scripts/migrate-to-ds.sh (NEW)
- DS_EXTRACTION_PLAN.md (NEW)
- DS_SOFT_EXTRACTION_COMPLETE.md (NEW)

This

--- a/packages/wizard-react/demo/package.json
+++ b/packages/wizard-react/demo/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@joseph.ehler/wizard-react": "workspace:*",
+    "@intstudio/ds": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
