--- a/packages/demo-app/tsconfig.json
+++ b/packages/demo-app/tsconfig.json
@@ -12,12 +12,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@joseph-ehler/wizard-react": ["../wizard-react/src/index.ts"]
+      "@intstudio/ds": ["../ds/src/index.ts"]
     }
   },
   "include": ["src"],
