feat: Enforce import hygiene + repo cleanup tooling
🔒 IMPORT HYGIENE SYSTEM

## Rules Enforced

**✅ ALLOWED:**
- Within-package relative imports
- Cross-package scoped imports (@intstudio/*)
- Barrel exports only

**❌ FORBIDDEN:**
- Deep imports (@intstudio/ds/src/*)
- Legacy package names (@joseph*)
- Cross-package relative imports (in consumer apps)

## ESLint Configuration

**.eslintrc.import-hygiene.json:**
- Blocks deep imports
- Blocks legacy package names
- Allows within-package relatives
- Enforces scoped imports in consumer apps

**Integrated into:**
- packages/ds/.eslintrc.guardrails.json
- CI guard script

## Scripts Created

**imports:audit** - Find all import violations
- Checks deep imports
- Checks legacy names
- Checks CSS imports from node_modules
- Color-coded output with violation count

**repo:cleanup** - Clean repository clutter
- Find duplicate files (" 2" suffix)
- Find empty directories
- Clean dist/ artifacts
- Remove orphaned node_modules
- Interactive prompts (safe)

**guard** (updated) - Comprehensive CI check
- depgraph:check (boundaries)
- imports:audit (hygiene)
- lint (ESLint)
- typecheck (TypeScript)

## Documentation

**IMPORT_HYGIENE.md:**
- Complete import rules
- Examples (allowed vs forbidden)
- Migration guide
- Troubleshooting
- Package export patterns
- Benefits explained
- Scripts reference

## Benefits

1. **Refactoring Safety**
   - Move files freely within packages
   - Consumers never break
   - Internal structure is private

2. **Clear Boundaries**
   - Package boundaries enforced
   - No accidental coupling
   - Circular dependencies impossible

3. **Publishing Ready**
   - workspace:* → npm versions (seamless)
   - Tree-shaking guaranteed
   - Version management clean

4. **Developer Experience**
   - Autocomplete works
   - Type checking fast
   - No import resolution ambiguity

## Files Created

- .eslintrc.import-hygiene.json
- scripts/audit-imports.sh
- scripts/cleanup-repo.sh
- IMPORT_HYGIENE.md

## Files Modifie

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "typecheck": "turbo run typecheck",
     "clean": "turbo run clean && rm -rf node_modules",
     "depgraph:check": "depcruise --config .dependency-cruiser.js packages",
-    "guard": "pnpm run depgraph:check && pnpm run lint && pnpm run typecheck",
+    "imports:audit": "./scripts/audit-imports.sh",
+    "repo:cleanup": "./scripts/cleanup-repo.sh",
+    "guard": "pnpm run depgraph:check && pnpm run imports:audit && pnpm run lint && pnpm run typecheck",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=!./examples/* && changeset publish",
