feat: Automagic Barrel & Import Doctor - Self-healing imports
IMPORT HYGIENE AUTOMATED - MISTAKES NOW IMPOSSIBLE

What We Built:
- Import Doctor detects & auto-fixes non-canonical imports
- Barrelizer generates deterministic barrel files
- Config-driven via repo.imports.yaml
- Pre-commit guard blocks bad imports
- CI enforcement prevents regressions
- Auto-fix mode with one command

Files Added:
- repo.imports.yaml (import rules)
- scripts/import-doctor.mjs (validator)
- scripts/barrelize.mjs (generator)
- AUTOMAGIC_IMPORTS.md (docs)
- .github/workflows/repo-hygiene.yml (CI)

Commands:
- pnpm imports:check (validate)
- pnpm imports:fix (auto-fix)
- pnpm barrels (regenerate)

Impact:
Before: Manual barrels, import drift, violations in code review
After: Auto-generated, instant validation, impossible to commit bad imports

MAKING MISTAKES IMPOSSIBLE, ONE IMPORT AT A TIME

--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "depgraph:check": "depcruise --config .dependency-cruiser.js packages",
     "imports:audit": "./scripts/audit-imports.sh",
+    "imports:check": "node scripts/import-doctor.mjs",
+    "imports:fix": "node scripts/import-doctor.mjs --fix",
+    "barrels": "node scripts/barrelize.mjs",
     "repo:cleanup": "./scripts/cleanup-repo.sh",
-    "guard": "pnpm run depgraph:check && pnpm run imports:audit && pnpm run lint && pnpm run typecheck",
+    "guard": "pnpm run imports:check && pnpm run depgraph:check && pnpm run lint && pnpm run typecheck",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=!./examples/* && changeset publish",
@@ -30,8 +33,11 @@
     "@playwright/test": "^1.56.1",
     "@types/node": "^20.11.0",
     "dependency-cruiser": "^17.1.0",
+    "fast-glob": "^3.3.3",
+    "glob": "^11.0.3",
     "husky": "^9.1.7",
     "hygen": "^6.2.11",
+    "js-yaml": "^4.1.0",
     "lint-staged": "^16.2.5",
     "tsup": "^8.0.2",
     "turbo": "^1.13.0",
