feat: God-tier repo hygiene - Root boundaries + docs discipline
MAKING SPRAWL IMPOSSIBLE

Root Boundaries Enforced:
- Root whitelist in repo.imports.yaml
- Repo Steward blocks non-orchestration files at root
- Auto-suggests correct locations (docs/, scripts/, packages/)
- Pre-commit enforcement

Docs Discipline Added:
- Structured layout: handbook/adr/rfc/playbooks/styleguides
- Package-specific docs: packages/*/docs/
- Auto-stow misplaced docs to correct location
- Heuristics: DS_*.md → ds/docs, PHASE_*.md → docs/handbook

Files Added:
- scripts/hygiene/repo-steward.mjs (boundary enforcer)
- scripts/hygiene/docs-autostow.mjs (doc auto-mover)
- docs/README.md (comprehensive docs guide)
- docs/{handbook,adr,rfc,playbooks,styleguides}/ (structure)

Updated:
- repo.imports.yaml (root boundaries config)
- .husky/pre-commit (repo steward + docs autostow)
- package.json (docs:autostow, repo:steward commands)

Commands:
- pnpm repo:steward (check boundaries)
- pnpm docs:autostow (move misplaced docs)
- pnpm guard (full pre-commit check)

What This Prevents:
- Root doc sprawl (PHASE_*.md at root)
- Root script sprawl (*.sh at root)
- Messy repo structure
- Lost documentation

Impact:
Before: Docs anywhere, scripts anywhere, root chaos
After: Everything organized, auto-moved, enforced by CI

NEXT: Docs linting, generators, nightly sweepers

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "imports:check": "node scripts/import-doctor.mjs",
     "imports:fix": "node scripts/import-doctor.mjs --fix",
     "barrels": "node scripts/barrelize.mjs",
+    "docs:autostow": "node scripts/hygiene/docs-autostow.mjs",
+    "repo:steward": "node scripts/hygiene/repo-steward.mjs",
     "repo:cleanup": "./scripts/cleanup-repo.sh",
-    "guard": "pnpm run imports:check && pnpm run depgraph:check && pnpm run lint && pnpm run typecheck",
+    "guard": "pnpm repo:steward && pnpm imports:check && pnpm depgraph:check",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=!./examples/* && changeset publish",
