feat: Phase 3 COMPLETE - Full god-tier hygiene suite
SELF-HEALING, SELF-DOCUMENTING, SELF-CLEANING REPOSITORY

What We Built (Phase 3):

1. Docs Linting System
   - remark + markdownlint + cspell
   - Front matter validation
   - Broken link detection
   - Spell checking
   - Command: pnpm docs:lint

2. Hygen Generators
   - new:ds:primitive (component + story)
   - new:docs:adr (Architecture Decision Record)
   - Auto-adds to correct locations
   - Includes boilerplate + front matter

3. Bundle Analysis
   - Per-module size tracking
   - 120KB module budget
   - Identifies bloat culprits
   - Command: pnpm -F @intstudio/ds analyze

4. Nightly Sweeper
   - Knip (unused exports)
   - ts-prune (dead code)
   - Madge (circular deps)
   - Linkinator (broken links)
   - Auto-creates PR with findings

5. Danger.js PR Automation
   - Inline import violation comments
   - Large PR warnings
   - Missing docs suggestions
   - Test coverage reminders

Files Added:
- .remarkrc.json (remark config)
- .markdownlint.json (markdown style)
- cspell.json (spell check dict)
- dangerfile.ts (PR automation)
- scripts/hygiene/docs-lint.mjs
- packages/ds/scripts/analyze-bundle.mjs
- .github/workflows/nightly-sweeper.yml
- _templates/ds/primitive/new/*
- _templates/docs/adr/new/*

Commands Added:
- pnpm docs:lint (validate docs)
- pnpm new:ds:primitive <Name>
- pnpm new:docs:adr <title>

Dependencies Added:
- remark-cli, markdownlint-cli, cspell
- hygen (generators)
- danger (PR automation)

Impact:
Before: Manual everything, sprawl, drift
After: Auto-linted, auto-generated, auto-swept, auto-annotated

THE COMPLETE SUITE IS NOW LIVE

--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "imports:fix": "node scripts/import-doctor.mjs --fix",
     "barrels": "node scripts/barrelize.mjs",
     "docs:autostow": "node scripts/hygiene/docs-autostow.mjs",
+    "docs:lint": "node scripts/hygiene/docs-lint.mjs",
     "repo:steward": "node scripts/hygiene/repo-steward.mjs",
     "repo:cleanup": "./scripts/cleanup-repo.sh",
     "guard": "pnpm repo:steward && pnpm imports:check && pnpm depgraph:check",
+    "new:ds:primitive": "hygen ds primitive new",
+    "new:docs:adr": "hygen docs adr new",
     "changeset": "changeset",
     "version-packages": "changeset version",
     "release": "turbo run build --filter=!./examples/* && changeset publish",
@@ -34,6 +37,8 @@
     "@changesets/cli": "^2.27.1",
     "@playwright/test": "^1.56.1",
     "@types/node": "^20.11.0",
+    "cspell": "^9.2.2",
+    "danger": "^13.0.4",
     "dependency-cruiser": "^17.1.0",
     "fast-glob": "^3.3.3",
     "glob": "^11.0.3",
@@ -41,6 +46,11 @@
     "hygen": "^6.2.11",
     "js-yaml": "^4.1.0",
     "lint-staged": "^16.2.5",
+    "markdownlint-cli": "^0.45.0",
+    "remark-cli": "^12.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-preset-lint-recommended": "^7.0.1",
+    "remark-validate-links": "^13.1.0",
     "tsup": "^8.0.2",
     "turbo": "^1.13.0",
     "typescript": "^5.4.5",
