feat: Add naming conventions taxonomy + Name Police enforcement
TAXONOMICALLY CORRECT NAMING, ENFORCED BY TOOLING

What We Built:

1. Comprehensive Naming Taxonomy
   - NPM packages: @intstudio/<kebab-case>
   - Directories: kebab-case
   - Components: PascalCase.tsx
   - Hooks: useCamelCase.ts
   - Utils: camelCase.ts
   - CSS: kebab-case.css
   - Tokens: --ds-<domain>-<name>
   - Docs: kebab-case.md (with front matter)
   - ADRs: YYYY-MM-DD-title.md
   - RFCs: NNNN-title.md

2. Name Police (Filename Enforcer)
   - Validates all filename conventions
   - Runs in pre-commit
   - Suggests correct locations
   - Cannot commit violations

3. Documentation
   - NAMING_CONVENTIONS.md (comprehensive guide)
   - Quick reference table
   - Common mistakes guide
   - Decision tree for file creation

Files Added:
- scripts/hygiene/name-police.mjs
- NAMING_CONVENTIONS.md

Updated:
- .husky/pre-commit (added Name Police)
- package.json (name-police script)

Commands:
- pnpm name-police (validate filenames)

Pre-commit Chain (in order):
1. Name Police (filename conventions)
2. Repo Steward (folder boundaries)
3. Docs Autostow (organize docs)
4. Import Doctor (canonical imports)
5. Barrelizer (regenerate barrels)
6. Lint Staged (format/lint)

Impact:
Before: Inconsistent naming, manual enforcement, drift
After: Taxonomically correct, auto-enforced, impossible to violate

COMPLETE GOD-TIER HYGIENE SUITE NOW LIVE

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "barrels": "node scripts/barrelize.mjs",
     "docs:autostow": "node scripts/hygiene/docs-autostow.mjs",
     "docs:lint": "node scripts/hygiene/docs-lint.mjs",
+    "name-police": "node scripts/hygiene/name-police.mjs",
     "repo:steward": "node scripts/hygiene/repo-steward.mjs",
     "repo:cleanup": "./scripts/cleanup-repo.sh",
     "guard": "pnpm repo:steward && pnpm imports:check && pnpm depgraph:check",
