--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@babel/generator": "^7.28.5",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "@babel/types": "^7.28.5",
     "@changesets/cli": "^2.27.1",
     "@playwright/test": "^1.56.1",
     "@types/node": "^20.11.0",
