--- a/factory.config.json
+++ b/factory.config.json
@@ -28,12 +28,17 @@
   },
   
   "refiner": {
-    "version": "1.1.0",
+    "version": "1.2.0",
     "autoRun": "pre-commit",
     "transforms": [
       {
         "name": "filter-dom-props",
         "version": "1.1.0",
+        "enabled": true
+      },
+      {
+        "name": "dedupe-jsx-attrs",
+        "version": "1.2.0",
         "enabled": true
       }
     ],
