feat(PR-3): Generator v2.4 - Adapters + Telemetry Hooks 🎯
**God Tier Wiring Complete - ~180 LOC**

Updated generator to emit adapters.ts and telemetry hooks:

**Feature Detection:**
- wantsTelemetry(spec) - checks telemetry.enabled
- wantsAsyncValidation(spec) - checks validation.async
- wantsSecurity(spec) - checks security.sanitize

**Adapters Generation:**
- renderAdapters(spec) - generates adapters.ts with ports
- Emits only when spec requests features
- Tree-shakeable imports

**Telemetry Hooks:**
- renderTelemetryHandlers(spec) - generates focus/blur handlers
- Auto-wires onFocus/onBlur to emit events
- Privacy-aware (respects spec.telemetry.pii)

**Generated Artifacts:**
✅ EmailEnhancedField.tsx (component with telemetry)
✅ adapters.ts (3 adapters: validation, telemetry, security)
✅ Telemetry events in console on focus/blur

**Proof of Concept:**
```bash
node scripts/process/field-from-spec-v2.mjs EmailEnhancedField
# Generated:
# - EmailEnhancedField.tsx
# - adapters.ts (validationAdapter, telemetryAdapter, securityAdapter)
# - Telemetry hooks wired automatically
```

**Zero breaking changes:**
- Existing 22 fields unchanged
- New features 100% opt-in via spec
- Backward compatible

**Next:** Refiner rules + AppProvider demo

DoD: ✅ Generator v2.4 ✅ Builds green ✅ Telemetry working

--- a/specs/fields/EmailEnhancedField.yaml
+++ b/specs/fields/EmailEnhancedField.yaml
@@ -1,4 +1,4 @@
-name: EmailFieldEnhanced
+name: EmailEnhancedField
 type: email
 specVersion: "1.2"
 description: Email input with async validation and telemetry (God Tier demo)
@@ -52,7 +52,6 @@ perf:
 # ========================================
 security:
   sanitize: true
-  allowListPattern: null
 
 # ========================================
 # I18N
