feat: Batch Analysis + Factory Overlays System 🔬
**SYSTEMATIZING PATTERN DISCOVERY & STYLE PROPAGATION**

Implemented two critical leverage points:
1. Batch analysis for data-driven insights before writing configs
2. Factory overlays for DRY configuration at scale

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
🎯 WHAT'S NEW
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

**1. Batch Analyzer (scripts/analyzer/analyze-batch.mjs)**
   ✅ Analyze multiple files in one pass
   ✅ Aggregate pattern statistics
   ✅ Outlier detection (compliance violations)
   ✅ Archetype clustering (simpleText, select, composite)
   ✅ Frequency analysis (DOM elements, DS primitives, props)
   ✅ Actionable recommendations

**2. Factory Overlays (factory-overlays.yaml)**
   ✅ Default settings per field type (text, email, select, etc.)
   ✅ UI variant definitions (default, quiet, danger, success)
   ✅ Density presets (compact, cozy, comfortable)
   ✅ Archetype patterns (realtime, connected, sensitive)
   ✅ Single source of truth for batch config

**3. Workflow Documentation (docs/BATCH_ANALYSIS_WORKFLOW.md)**
   ✅ Complete guide: Observe → Understand → Pattern? → Systematize
   ✅ Real-world examples (compact density, icon support)
   ✅ CLI quick reference
   ✅ Philosophy: "Don't copy diffs. Codify patterns."

**4. New Command**
   `pnpm analyze:batch <pattern>` - Batch field analysis

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
🔬 BATCH ANALYSIS - DISCOVER BEFORE YOU DECIDE
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

**Usage:**
```bash
# Analyze all fields
pnpm analyze:batch "packages/forms/src/fields/**/*.tsx"

# Save report
pnpm analyze:batch "..." > tmp/batch-report.json

# View specific sections
pnpm analyze:batch "..." | jq '.aggregate.outliers'
pnpm analyze:batch "..." | jq '.aggregate.archetypes'
```

**What You Get:**
- Pattern frequency (DOM elements, DS primitives, props)
- Compliance statistics (RHF, ARIA, error handling)
- Outlier detection (violations,

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "refine:dry": "node scripts/refiner/index.mjs",
     "refine:run": "node scripts/refiner/index.mjs --apply",
     "analyze:field": "node scripts/analyzer/field-analyzer.mjs",
+    "analyze:batch": "node scripts/analyzer/analyze-batch.mjs",
     "spec:from-analysis": "node scripts/analyzer/to-spec.mjs",
     "spec:validate": "node scripts/process/validate-spec.mjs",
     "field:new": "node scripts/process/field-from-spec-v2.mjs",
