fix: Complete ARIA implementation + lock batch insights ♿🔬
**BATCH ANALYSIS → DATA-DRIVEN FIXES**

Used batch analysis to discover gaps, fix them, and lock learnings into
the factory overlays for future fields.

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
🎯 ARIA GAPS FIXED
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

**RangeField:**
✅ Added aria-describedby to both min and max inputs
✅ Links to ${name}-desc helper text ID

**RatingField (radiogroup):**
✅ Wrapped FormLabel in div with ID for aria-labelledby
✅ Added aria-labelledby pointing to label
✅ Added aria-describedby pointing to description
✅ Added aria-invalid for error state
✅ Added aria-errormessage pointing to error text ID
✅ Wrapped error FormHelperText in div with ID

**Result:** 23/23 fields now have complete ARIA coverage! ✨

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📦 FACTORY OVERLAYS UPDATED
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Based on batch analysis insights:

**Data-Driven Findings:**
- 21/23 fields (91%) are "Simple Text" archetype
- 100% use Controller + Stack + FormLabel + FormHelperText
- 100% have 8 core props
- 39% have placeholder prop

**Updated factory-overlays.yaml:**
```yaml
defaults:
  text:  # Simple Text archetype (91% of codebase)
    accessibility:
      htmlFor: true
      ariaDescribedBy: true
      ariaInvalid: true
    structure:
      wrapper: Stack
      label: FormLabel
      control: Controller
      helper: FormHelperText
```

**Impact:** New fields auto-inherit these standards!

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
📊 BATCH ANALYSIS VALIDATION
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

**Before Fix:**
- RHF Integration: 23/23 ✅
- DS Primitives: 23/23 ✅
- ARIA Labels: 23/23 ✅
- ARIA Descriptions: 21/23 ⚠️  ← Fixed!
- ARIA Invalid: 22/23 ⚠️  ← Fixed!
- No Inline Styles: 23/23 ✅

**After Fix:**
- Full Compliance: 23/23 ✅ (was 21/23)
- ARIA Descriptions: 23/23 ✅
- ARIA Invalid: 23/23 ✅

**Zero outliers. Pe

--- a/factory-overlays.yaml
+++ b/factory-overlays.yaml
@@ -9,9 +9,16 @@
 # ============================================
 # DEFAULT SETTINGS BY FIELD TYPE
 # ============================================
+# 
+# Based on batch analysis of 23 fields:
+# - 21/23 (91%) are simple text-like inputs
+# - 100% use Controller, FormLabel, FormHelperText, Stack
+# - 100% have name, control, errors, label, description, required, disabled props
+# - 39% have placeholder prop
 
 defaults:
   # All text-like inputs (text, email, tel, url, etc.)
+  # Archetype: Simple Text (21 fields, 91% of codebase)
   text:
     ui:
       variant: default
@@ -24,9 +31,18 @@ defaults:
     accessibility:
       label: true
       description: true
+      htmlFor: true  # FormLabel must have htmlFor={name}
+      ariaDescribedBy: true  # Inputs should link to helper text
+      ariaInvalid: true  # Inputs should indicate error state
     performance:
       debounce: 0
       lazy: false
+    structure:
+      # Every field follows this 3-component pattern
+      wrapper: Stack
+      label: FormLabel
+      control: Controller  # RHF integration
+      helper: FormHelperText
   
   # Email-specific defaults
   email:
